--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="fontawesome-free-6.2.0-web/css/all.css" /> -->
+
     <title>money2022</title>
-</head>
-<body>
+  </head>
+  <body>
     <style>
-        .square {
-          background: #fff;
-          border: 1px solid #999;
-          float: left;
-          font-size: 24px;
-          font-weight: bold;
-          line-height: 34px;
-          height: 34px;
-          margin-right: -1px;
-          margin-top: -1px;
-          padding: 0;
-          text-align: center;
-          width: 34px;
-        }
-        
-        .game {
-  display: flex;
-  flex-direction: row;
-}
-        </style>
+      *{
+        /* margin: 0; */
+      }
+      /* .square {
+        background: #fff;
+        border: 1px solid #999;
+        float: left;
+        font-size: 24px;
+        font-weight: bold;
+        line-height: 34px;
+        height: 34px;
+        margin-right: -1px;
+        margin-top: -1px;
+        padding: 0;
+        text-align: center;
+        width: 34px;
+      }
 
-
+      .game {
+        display: flex;
+        flex-direction: row;
+      } */
+    </style>
 
     <div id="root"></div>
-</body>
+  </body>
 </html>
